# Sandbox-MoGe

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  inference.py  pyproject.toml  run_all.sh  ui.py
backend/: Dockerfile.backend  inference.py  main.py  routes.py  schemas.py
doc/: api_spec.md  inference.md
frontend/: Dockerfile.frontend  app.py
tests/: test_api.py  test_measure.py  test_schemas.py
